# sotion

./: .env.example  .gitignore  DATABASE_SETUP.md  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentProfile.tsx  AgentSidebar.tsx  ChannelList.tsx  ChatView.tsx  DocumentEditor.tsx  DocumentList.tsx  MarkdownMessage.tsx  MentionInput.tsx  TaskList.tsx  Toast.tsx
frontend/src/hooks/: useToast.ts  useWebSocket.ts
frontend/src/types/: index.ts
plans/: PLAN-v0.md
sotion/: __init__.py  __main__.py  main.py  orchestrator.py
sotion/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
sotion/agent/tools/: __init__.py  cron.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
sotion/agents/: __init__.py
sotion/agents/roles/: coordinator.md  developer.md  documenter.md  planner.md  researcher.md  reviewer.md
sotion/api/: __init__.py  routes.py  websocket.py
sotion/bus/: __init__.py  events.py  queue.py  router.py
sotion/channels/: __init__.py  base.py  manager.py  web_channel.py
sotion/cli/: __init__.py  commands.py
sotion/config/: __init__.py  loader.py  schema.py
sotion/cron/: __init__.py  service.py
sotion/db/: __init__.py  client.py  models.py  queries.py
sotion/documents/: __init__.py  lifecycle.py  manager.py
sotion/heartbeat/: __init__.py
sotion/incentives/: __init__.py  budget.py  evaluator.py  tracker.py
sotion/pipelines/: __init__.py  engine.py  schema.py
sotion/providers/: __init__.py  litellm_provider.py  registry.py
sotion/session/: __init__.py  manager.py
sotion/skills/: README.md
sotion/utils/: __init__.py  helpers.py
(+14 files in other folders)
