[project]
name = "sotion"
version = "0.1.0"
description = "Slack+Notion hybrid for managing AI agent teams"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
keywords = ["ai", "agent", "multi-agent", "chatbot", "notion", "slack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # From nanobot core
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "readability-lxml>=0.8.1",

    # Sotion-specific
    "supabase>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
sotion = "sotion.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sotion"]

[tool.hatch.build]
include = [
    "sotion/**/*.py",
    "sotion/skills/**/*.md",
    "sotion/skills/**/*.sh",
    "sotion/agents/roles/**/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "sotion/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
